fixed current weather image alignment bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,11 +93,8 @@ button {
 }
 
 #current-weather {
-    display: flex;
-    /* flex-wrap: wrap; */
     flex-direction: column;
     justify-content: center;
-    width: 100%;
     height: 100%;
     text-align: center;
 }
@@ -106,8 +103,6 @@ button {
     margin: 15px 0; /* Add margin to the weather icon for spacing */
     width: 100px; /* Optional: Set a fixed size for the weather icon */
     height: auto;  /* Keep the aspect ratio of the icon */
-    padding: 0;
-    margin: 0;
 }
 
 #weather-forecast {
